[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "drekar-launch"
version = "0.1.2"
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
description = "A simple launcher for Robotics applications"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "appdirs",
    "drekar-launch-process",
    "jinja2"
]
readme = "README.md"

[project.scripts]
drekar-launch = "drekar_launch:main"

[tool.setuptools]
py-modules = [
    "drekar_launch"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pywin32;platform_system=='Windows'"
]